<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".activities.QRCodeActivity">

    <EditText
        android:id="@+id/edtText"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="56dp"
        android:hint="@string/enter_text_to_generate_qr_code"
        android:padding="8dp"
        android:background="@drawable/textfield_bg"
        android:inputType="textMultiLine|textPersonName|textCapSentences"
        android:autofillHints="textPersonName"
        android:ems="10"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btnGenerate"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:text="@string/generate_qr_code" />

    <ImageView
        android:id="@+id/imageQR"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        android:contentDescription="@string/todo" />

</LinearLayout>