<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardElevation="0dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/rate_our_app"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            android:textSize="16sp" />

        <com.willy.ratingbar.ScaleRatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            app:srb_numStars="5"
            app:srb_starWidth="25dp"
            app:srb_starHeight="25dp"
            app:srb_starPadding="5dp"
            app:srb_stepSize="0.25"
            app:srb_isIndicator="false"
            app:srb_clickable="true"
            app:srb_scrollable="true"
            app:srb_clearRatingEnabled="true"
            app:srb_drawableEmpty="@drawable/ic_empty_star"
            app:srb_drawableFilled="@drawable/ic_filled_star" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnRateUs"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/rateus"
                android:textColor="@color/white"
                android:background="@drawable/button_rateus_bg"
                android:padding="10dp"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/btnClose"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="@color/color_primary"
                android:background="@drawable/button_close_bg"
                android:padding="10dp"
                android:text="@string/close"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>